Update link for details submission buttonr

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <p>Click the button below to provide your details and get started with our services.</p>
             </div>
             
-            <a href="https://forms.gle/pgjCh1fb31VqdsGw7" target="_blank" class="btn" id="detailsBtn">
+            <a href="https://forms.gle/bgAg49BTD9pBmxms6" target="_blank" class="btn" id="detailsBtn">
                 <span class="btn-icon">+</span>
                 Add Your Details
             </a>
